[package]
name = "vpo_pitch_calc"
description = "Library for synthesizer 1V/Octave pitch calculations."
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pitch_calc = "0.12.0"
